--- a/index.html
+++ b/index.html
@@ -5,11 +5,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atik-Portfolio</title>
+    <!-- css file link -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- font awesome file link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Serif:wght@200;300;400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <h1>Atik Hasan portfolio</h1>
+    <!-- Top Banner -->
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name-atik">Atik Hasan </span> World</h1>
+            <h3>Build CLimber And Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.</p>
+            <a class="hireMe" href="#">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="img/my-bg.png" alt="">
+        </div>
+    </section>
+    <!-- Dream Big -->
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="img/my-bg.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a href="#" class="hireMe">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <!-- Experience section -->
+    <section class="experience-aria">
+        <h1 class="expereince">Experience</h1>
+        <div class="experience-container">
+            <div class="exper-width full-slice" >
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="name-atik">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div class="exper-width baby-slice">
+                <h1>Baby Web Developer</h1>
+                <h3 class="name-atik">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- Footer section -->
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
